Action Evaluator Done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Interpreter_Project C)
 set(CMAKE_C_STANDARD 23)
 
 add_executable(Interpreter_Project main.c
-        hashmap.c
         Structs.c
         parsing.c
+        Evaluators.c
 )
