--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,9 @@ project(Interpreter_Project C)
 set(CMAKE_C_STANDARD 23)
 
 add_executable(Interpreter_Project main.c
-        hashmap.c
         Structs.c
         parsing.c
         Evaluators.c
         Evaluators.h
-        Evaluators.c
-        Evaluators.c
-        Evaluators.c
+        parsing.h
 )
